fix message associated to macro negativo

--- a/config.ini
+++ b/config.ini
@@ -29,7 +29,7 @@ msg = "Un secondo punto di vista a volte aiuta ..."
 
 [negativo]
 path = "./resources/meme/negativo.jpg"
-msg = "Un secondo punto di vista a volte aiuta ..."
+msg = "Un numero negativo è un numero come un'altro, non discriminarlo!"
 
 [nonlineare]
 path = "./resources/meme/nonlineare.jpg"
